--- a/devServer/package.json
+++ b/devServer/package.json
@@ -16,6 +16,7 @@
     "gravatar": "^1.8.1",
     "helmet": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
+    "mongo-sanitize": "^1.1.0",
     "mongoose": "^5.10.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
